# CalibForge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apply/: README.md
apply/include/calibforge/: remap.hpp  remap_cuda.hpp  vpi_coeffs.hpp  vpi_ldc.hpp  warp_map.hpp
apply/src/: cuda_check.cuh  remap_cuda.cu
bindings/: README.md
bindings/python/: calibforge_py.cpp
bindings/ros2/: CMakeLists.txt  calibforge_node.cpp  package.xml
core/include/calibforge/: brown_conrady_camera.hpp  camera_model.hpp  double_sphere_camera.hpp  eucm_camera.hpp  generic_bspline_camera.hpp  image.hpp  kannala_brandt_camera.hpp  lie.hpp  pinhole_camera.hpp
detect/: README.md
detect/include/calibforge/: bev_photometric.hpp  board.hpp  checkerboard_detect.hpp  corner_detect.hpp  detect_opencv.hpp  feature_tracker.hpp  render_board.hpp  triangulate.hpp
docs/: API.md  BENCHMARKS.md  DEPENDENCIES.md  DESIGN.md  ISSUE_UPDATES.md  RESEARCH.md  SPIKES.md  TUTORIAL.md
io/: README.md
io/include/calibforge/: frames.hpp  generic_bspline_yaml.hpp  isaac_urdf.hpp  kalibr_camchain.hpp  opencv_yaml.hpp  ros_camera_info.hpp
online/: README.md
online/include/calibforge/: online_calibration.hpp  online_extrinsic_tracker.hpp
pipelines/: README.md
pipelines/include/calibforge/: calibrate_cam_imu.hpp  calibrate_cam_imu_full.hpp  calibrate_hand_eye.hpp  calibrate_rig.hpp  calibrate_rolling_shutter.hpp  calibrate_stereo.hpp  online_surround_rig.hpp  online_uav.hpp  rectify_stereo.hpp
solve/include/calibforge/: calibrate_generic_bspline.hpp  calibrate_single.hpp  cam_imu_gyro_residual.hpp  cam_imu_pose_residual.hpp  cuda_linear_solver.hpp  dense_problem.hpp  hand_eye_residual.hpp  imu_preintegration_residual.hpp  imu_preintegrator.hpp  least_squares.hpp  manifold.hpp  observability.hpp  problem.hpp  reprojection_residual.hpp  residual_block.hpp  rolling_shutter_residual.hpp  stereo_reprojection_residual.hpp
solve/src/: cuda_linear_solver.cu
src/: arch_probe.cu
tests/: cf_test.hpp  test_bev_photometric.cpp  test_brown_conrady_camera.cpp  test_calibrate_hand_eye.cpp  test_calibrate_rig.cpp  test_calibrate_single.cpp  test_calibrate_stereo.cpp  test_cam_imu.cpp  test_cam_imu_full.cpp  test_cuda_fp32_fp64_parity.cpp  test_cuda_linear_solver.cpp  test_detect.cpp  test_detect_opencv_charuco_aprilgrid.cpp  test_determinism.cpp  test_double_sphere_camera.cpp  test_eucm_camera.cpp  test_feature_tracker.cpp  test_generic_bspline_calibrate.cpp  test_generic_bspline_camera.cpp  test_imu_preintegration_residual.cpp  test_imu_preintegrator.cpp  test_kalibr_camchain.cpp  test_kannala_brandt_camera.cpp  test_least_squares.cpp  test_main.cpp  test_observability.cpp  test_online_calibration.cpp  test_online_extrinsic_tracker.cpp  test_online_surround_rig.cpp  test_online_uav.cpp  test_opencv_gated.cpp  test_opencv_yaml.cpp  test_pinhole_camera.cpp  test_problem.cpp  test_rectify_stereo.cpp  test_remap.cpp  test_rig_uncertainty.cpp  test_robust_loss.cpp  test_rolling_shutter.cpp  test_ros_isaac_emit.cpp  (+2 more)
tests/python/: test_bindings.py
tools/benchmark/: calibforge_bench.cpp
tools/spikes/: spike_nvtorchcam.py  spike_pypose_lm.py
